<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <ListView
        android:id="@+id/chatListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <!-- figure out how to put this at the bottom of the page...use relative layout here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">


        <Button
            android:id="@+id/sendButton"
            android:layout_weight = "2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/send_button" />

        <EditText
            android:id="@+id/chat_ET"
            android:layout_weight = "5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/chatHint"/>

        <Button
            android:id="@+id/receiveButton"
            android:layout_weight = "2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/receive_button"/>

    </LinearLayout>



</LinearLayout>
